--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,11 @@
     "scripts": {
         "start": "node server.js"
     },
+    "engines": {
+        "node": ">=22.14.0"
+    },
     "dependencies": {
+        "axios": "^1.8.4",
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
